--- a/package.json
+++ b/package.json
@@ -13,17 +13,28 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-formidable": "^1.2.0",
+    "express-handlebars": "^6.0.6",
     "express-rate-limit": "^6.6.0",
+    "express-session": "^1.17.3",
     "helmet": "^6.0.0",
+    "html-to-text": "^8.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
+    "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.19",
+    "pug": "^3.0.2",
     "slugify": "^1.6.5",
+    "stripe": "^10.12.0",
+    "tslib": "^2.4.0",
     "validator": "^13.7.0"
   }
 }
